# CMake_test

1cmake_test/: CMakeLists.txt  log.txt
2cmake_test_xlog/: CMakeLists.txt
3message/: CMakeLists.txt
3message_and_varible_Test/: CMakeLists.txt
4BuiltInVaribles/: CMakeLists.txt  xlog.h
4BuiltInVaribles/b/: CMakeCache.txt  Makefile  cmake_install.cmake
5include_Test/: CMakeLists.txt
5include_Test/cmake/: test_cmake.cmake
6auto_add_source/: CMakeLists.txt  main.cc
6auto_add_source/b/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  auto_add_source.sln  auto_add_source.vcxproj  auto_add_source.vcxproj.filters  cmake_install.cmake
6auto_add_source/include/: xlog.h
6auto_add_source/src/: xlog.cc
7directory/: CMakeLists.txt
7directory/test_xlog/: CMakeLists.txt
7directory/xlog/: CMakeLists.txt  xlog.h
first_cmake1/: CMakeLists.txt  main.cc
first_cmake1/g/: CMakeCache.txt  Makefile  cmake_install.cmake
